Adding missed Preferred Flag

--- a/sys-contacts-api/src/main/resources/api/examples/get_communication_example.yaml
+++ b/sys-contacts-api/src/main/resources/api/examples/get_communication_example.yaml
@@ -2,7 +2,9 @@
   id: 6543
   communicationType: "Phone"
   communicationValue: "904-568-9343"
+  isPrefered: true
 - 
   id: 7543
   communicationType: "Email"
   communicationValue: "someone@gmail.com"
+  isPrefered: false
