--- a/sys-contacts-api/src/main/resources/api/examples/post_contact_example.yaml
+++ b/sys-contacts-api/src/main/resources/api/examples/post_contact_example.yaml
@@ -21,6 +21,8 @@ communications:
   - 
     communicationType: "Phone"
     communicationValue: "904-568-9343"
+    isPrefered: true
   - 
     communicationType: "Email"
     communicationValue: "someone@gmail.com"
+    isPrefered: false
